<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dream_photo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@color/material_dynamic_neutral30"
            android:contentDescription="@string/dream_photo"
            android:cropToPadding="true"
            android:scaleType="centerInside" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dream_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dream"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <EditText
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:text="Dream Title Field" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/fulfilled_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fulfilled" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/deferred_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deferred" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/last_updated_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:text="Update Time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/entry_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entries"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dream_entry_recycler"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:listitem="@layout/list_item_dream_entry" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_reflection_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:clickable="true"
            android:contentDescription="@string/add_reflection_button"
            android:focusable="true"
            android:src="@drawable/ic_add"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@color/teal_700"
            app:tint="@color/white" />
    </LinearLayout>


</LinearLayout>